fix: repair line breaks in advantages section

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -32,12 +32,20 @@
 
 .advantages__container {
   box-sizing: border-box;
-  padding: 24px 18px 26px;
+  padding: 24px 25px 26px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   text-align: center;
+
+  // & br {
+  //   display: none;
+  // }
+
+  &--reverse {
+    order: 2;
+  }
 
   &--background {
     color: @color-light;
@@ -52,10 +60,22 @@
     background-color: #eeeeee;
   }
 
+  &--smaller {
+    padding: 24px 35px 26px;
+  }
+
   @media (min-width: @tablet) {
-    padding: 40px;
+    padding: 40px 32px;
     width: calc(1 / 3 * 100%);
     min-height: 256px;
+  }
+
+  @media (min-width: @desktop) {
+    padding: 50px 60px;
+
+    &--smaller {
+      padding: 44px 35px;
+    }
   }
 }
 
@@ -83,6 +103,11 @@
   font-size: 18px;
   line-height: 26px;
   color: @color-secondary;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 12px;
+    font-size: 21px;
+  }
 }
 
 .advantages__number {
@@ -91,6 +116,10 @@
   &::before {
     counter-increment: advantages;
     content: "— №" counter(advantages) " —";
+  }
+
+  @media (min-width: @tablet) {
+    margin-bottom: 23px;
   }
 }
 
